--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-17  Richard Henderson  <rth@redhat.com>
+
+	* config/alpha/alpha.md (unop): Encode RB as $sp.
+
 2001-12-17  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* Makefile.in: Update dependencies.
