--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-17  Tom Tromey  <tromey@redhat.com>
+
+	For PR java/5057:
+	* libjava.lang/PR5057.out: New file.
+	* libjava.lang/PR5057.java: New file.
+
 2001-12-13  Tom Tromey  <tromey@redhat.com>
 
 	For PR libgcj/5103:
