Inspired by PR java/5057: 	* libjava.lang/PR5057_2.java: New file. 	* libjava.lang/PR5057_2.out: New file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48142 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2001-12-17  Tom Tromey  <tromey@redhat.com>
 
+	Inspired by PR java/5057:
+	* libjava.lang/PR5057_2.java: New file.
+	* libjava.lang/PR5057_2.out: New file.
+
 	For PR java/5057:
 	* libjava.lang/PR5057.out: New file.
 	* libjava.lang/PR5057.java: New file.
