* config/h8300/h8300.c: Fix comment typos. 	* config/h8300/h8300.h: Fix comment formatting.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48143 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-18  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.c: Fix comment typos.
+	* config/h8300/h8300.h: Fix comment formatting.
+
 2001-12-17  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* machmode.h (mode_name, mode_class, mode_size, mode_unit_size,
