* libjava.lang/PR3731.xfail: Removed.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48144 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,5 +1,7 @@
 2001-12-17  Tom Tromey  <tromey@redhat.com>
 
+	* libjava.lang/PR3731.xfail: Removed.
+
 	Inspired by PR java/5057:
 	* libjava.lang/PR5057_2.java: New file.
 	* libjava.lang/PR5057_2.out: New file.
