--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-18  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* po/gcc.pot: Regenerate.
+
 2001-12-18  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.c: Fix comment typos.
