--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-18  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* call.c, decl2.c, init.c: Use "built-in" and "bit-field"
+	spellings in messages.
+
 2001-12-17  Zack Weinberg  <zack@codesourcery.com>
 
 	* cp-tree.h: Delete #defines for cp_error, cp_warning,
