C++ ABI change: destroy value arguments in caller.         * calls.c (initialize_argument_information): Pass the address of         the TARGET_EXPR temporary rather than storing it into another.         * semantics.c (genrtl_start_function, genrtl_finish_function): Don't         create an extra binding level for the parameters.         * decl.c (store_parm_decls): Don't do parameter cleanups.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48154 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2001-12-18  Jason Merrill  <jason@redhat.com>
+
+	C++ ABI change: destroy value arguments in caller.
+	* semantics.c (genrtl_start_function, genrtl_finish_function): Don't
+	create an extra binding level for the parameters.
+	* decl.c (store_parm_decls): Don't do parameter cleanups.
+
 2001-12-18  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* call.c (build_new_method_call): Use '%#V'.
