--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-18  Jason Merrill  <jason@redhat.com>
+
+	C++ ABI change: destroy value arguments in caller.
+	* calls.c (initialize_argument_information): Pass the address of
+	the TARGET_EXPR temporary rather than storing it into another.
+
 Tue Dec 18 07:09:06 2001  Douglas B. Rupp  <rupp@gnat.com>
 
 	* config/alpha/xm-vms.h (INCLUDE_DEFAULTS): Add /gnu/include.
