--- a/gcc/cp/NEWS
+++ b/gcc/cp/NEWS
@@ -40,6 +40,10 @@
   forms of `operator delete[]', and declared the two-argument form
   before the one-argument form.
 
+* The C++ ABI has been changed so that when a parameter is passed by value,
+  any cleanup for that parameter is performed in the caller, as specified
+  by the ia64 C++ ABI, rather than the called function as before.
+
 *** Changes in GCC 3.0:
 
 * Support for guiding declarations has been removed.
