* pt.c (instantiate_clone): Remove, fold into ... 	(instantiate_template): ... here. Simplify by removing mutual 	recursion. 	* typeck2.c (build_m_component_ref): Don't cv qualify the function 	pointed to by a pointer to function. 	* class.c (delete_duplicate_fields_1): Typo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48155 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,12 @@
+2001-12-18  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* pt.c (instantiate_clone): Remove, fold into ...
+	(instantiate_template): ... here. Simplify by removing mutual
+	recursion.
+	* typeck2.c (build_m_component_ref): Don't cv qualify the function
+	pointed to by a pointer to function.
+	* class.c (delete_duplicate_fields_1): Typo.
+
 2001-12-18  Jason Merrill  <jason@redhat.com>
 
 	C++ ABI change: destroy value arguments in caller.
