For PR java/3417: 	* libjava.compile/PR3417.xfail: New file. 	* libjava.compile/PR3417.java: New file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48161 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-18  Tom Tromey  <tromey@redhat.com>
+
+	For PR java/3417:
+	* libjava.compile/PR3417.xfail: New file.
+	* libjava.compile/PR3417.java: New file.
+
 2001-12-17  Tom Tromey  <tromey@redhat.com>
 
 	* libjava.lang/PR3731.xfail: Removed.
