* java/text/CollationElementIterator.java (secondaryOrder): Cast 	result to `short'. 	(tertiaryOrder): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48162 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-18  Tom Tromey  <tromey@redhat.com>
+
+	* java/text/CollationElementIterator.java (secondaryOrder): Cast
+	result to `short'.
+	(tertiaryOrder): Likewise.
+
 2001-12-16  Tom Tromey  <tromey@redhat.com>
 
 	For PR libgcj/5103:
