* include/jvm.h (_Jv_BuildGCDescr): Declare unconditionally. 	* nogc.cc (_Jv_BuildGCDescr): Define unconditionally.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48169 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-19  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* include/jvm.h (_Jv_BuildGCDescr): Declare unconditionally.
+	* nogc.cc (_Jv_BuildGCDescr): Define unconditionally.
+
 2001-12-18  Tom Tromey  <tromey@redhat.com>
 
 	* java/text/CollationElementIterator.java (secondaryOrder): Cast
