--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-18  Stan Shebs  <shebs@apple.com>
+
+	* rs6000.h (LOCAL_ALIGNMENT): Fix parens.
+
 Tue Dec 18 17:02:06 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* emit-rtl.c (widen_memory_access): Only call compare_tree_int
