--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Wed Dec 19 06:12:34 2001  Douglas B. Rupp  <rupp@gnat.com>
+
+	* dwarf2out.c (add_name_and_src_coords_attributes): Fix VMS procedure
+	descriptor output.
+
 2001-12-18  Stan Shebs  <shebs@apple.com>
 
 	* rs6000.h (LOCAL_ALIGNMENT): Fix parens.
