cp: 	PR c++/90 	* typeck.c (build_function_call_real): Use original function 	expression for errors. testsuite: 	* g++.dg/other/error1.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48176 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-19  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/90
+	* typeck.c (build_function_call_real): Use original function
+	expression for errors.
+
 2001-12-18  Jason Merrill  <jason@redhat.com>
 
 	* class.c (add_method): Do compare 'this' quals when trying to match a
