Define SUPPORTS_INIT_PRIORITY
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48177 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-19  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* config/arm/coff.h (SUPPORTS_INIT_PRIORITY): Define (to false).
+	* config/arm/elf.h (SUPPORTS_INIT_PRIORITY): Define (to true).	
+
 Wed Dec 19 06:12:34 2001  Douglas B. Rupp  <rupp@gnat.com>
 
 	* dwarf2out.c (add_name_and_src_coords_attributes): Fix VMS procedure
