Remove definition: EXTRA_MULTILIB_PARTS
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48178 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2001-12-19  Nick Clifton  <nickc@cambridge.redhat.com>
 
+	* config/arm/t-xscale-coff (EXTRA_MULTILIB_PARTS): Remove definition.
+
 	* config/arm/coff.h (SUPPORTS_INIT_PRIORITY): Define (to false).
 	* config/arm/elf.h (SUPPORTS_INIT_PRIORITY): Define (to true).	
 
