Pass -mno-fpu onto gas unless -mhard-float is specified.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48179 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2001-12-19  Nick Clifton  <nickc@cambridge.redhat.com>
 
+	* config/arm/xscale-elf.h (SUBTARGET_EXTRA_ASM_SPEC): Pass
+	-mno-fpu onto gas unless -mhard-float is specified.
+	(MULTILIB_DEFAULTS): Include msoft-float.
+
 	* config/arm/t-xscale-coff (EXTRA_MULTILIB_PARTS): Remove definition.
 
 	* config/arm/coff.h (SUPPORTS_INIT_PRIORITY): Define (to false).
