* config/ia64/ia64.c (ia64_single_set): Return first set for 	prologue_allocate_stack and epilogue_deallocate_stack instructions.
	* gcc.c-torture/compile/20011219-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48187 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-19  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20011219-1.c: New test.
+
 2001-12-19  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/other/error1.C: New test.
